# deterministic_gaussian_sampling_py

./: .gitignore  Doxyfile  LICENSE  README.md  dirac_to_dirac.py  dynamic_dll_loading.py  gaussian_to_dirac.py  pyproject.toml  setup.cfg  smart_sampling_py.py
.github/workflows/: build-package.yml
doxygen/: python_pages.dox
src/deterministic_gaussian_sampling/: __init__.py
src/deterministic_gaussian_sampling/approximation/: __init__.py  base_approximation.py  dirac_to_dirac.py  gaussian_to_dirac.py
src/deterministic_gaussian_sampling/dll_handling/: __init__.py  dynamic_dll_loading.py
src/deterministic_gaussian_sampling/type_wrapper/: __init__.py  ctypes_wrapper.py  python_variant.py
tests/: test_dirac_to_dirac.py  test_gm_to_dirac.py
