[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deterministic_gaussian_sampling"
version = "0.1.0"
description = "Python library for Localized Distribution (LCD)-based Gaussian sampling."
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name="Aaron Preus", email="udxct@student.kit.edu" }
]
license = { text = "MIT" }

dependencies = ["numpy", "pathlib"]

[project.urls]
Homepage = "https://github.com/KIT-ISAS/deterministic_gaussian_sampling_py"
