[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deterministic_gaussian_sampling"
version = "0.1.7"
description = "Python library for Localized Distribution (LCD)-based Gaussian sampling."
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Aaron Preus", email = "udxct@student.kit.edu" }
]
license = { text = "MIT" }
dependencies = ["numpy"]

[project.urls]
Homepage = "https://github.com/KIT-ISAS/deterministic_gaussian_sampling_py"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
deterministic_gaussian_sampling = [
    "lib/**/*.dll",
    "lib/**/*.so",
    "lib/**/*.dylib"
]
