[metadata]
name = deterministic-gaussian-sampling
version = 0.1.0
description = Deterministic Gaussian sampling package
author = Aaron Preus
author_email = udxct@student.kit.edu
long_description = file: README.md
long_description_content_type = text/markdown
python_requires = >=3.8

[options]
packages = find:
package_dir =
    = src
